<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="saved_favorites">Favorites</string>
    <string name="saved_favoriteStations">Saved stations</string>
    <string name="saved_favoriteRoutes">Saved routes</string>
    <string name="saved_favoriteTrains">Saved trains</string>
    <string name="saved_journeyHistory">Journey history</string>
    <string name="saved_trainHistory">Train history</string>
    <string name="saved_empty">Nothing saved yet</string>
...
